[package]
name = "s_home_proto"
version = "0.1.0"
edition = "2021"
description = "message types to handle smart_home things"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.74"
