[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
s_home_proto = { path = "../s_home_proto" }

[dev-dependencies]
power_socket_server = { path = "../power_socket_server"}
thermometer_server = { path = "../thermometer_server"}
